<resources>
    <string name="app_name">Tweeter</string>

    <string name="homePageTitle">Home</string>
    <string name="userImageContentDescription">The user\'s image</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>
    <string name="alias_label">Alias:</string>
    <string name="alias_hint">\@TestUser</string>
    <string name="password_label">Password:</string>
    <string name="password_hint">test_password</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="logout_title">Logout</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="statusImageContentDescription">The image for the user the status belongs to.</string>
    <string name="name">name</string>
    <string name="alias">name</string>
    <string name="postingTimestamp">postingTimestamp</string>
    <string name="search_title">Search</string>
    <string name="settings_title">Settings</string>
    <string name="visiting_activity_title">VISITING STORY</string>
    <string name="title_activity_visitor">VisitorActivity</string>
    <string name="follow_button">Follow</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="register_name_label">First + Last Name:</string>
    <string name="register_alias_label">Alias:</string>
    <string name="register_password_label">Password:</string>
    <string name="upload_picture">Upload Profile Picture</string>
    <string name="register_button">Register:</string>
    <string name="followerCount">No Followers</string>
    <string name="followeeCount">No Followees</string>
</resources>
