<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Client.view.main.VisitorActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
            <Button
                android:id="@+id/search_button"
                android:layout_width="76dp"
                android:layout_height="38dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginStart="30dp"
                android:background="@drawable/button_oval"
                android:text="@string/search_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10dp" />
            <Button
                android:id="@+id/logout_button"
                android:layout_width="87dp"
                android:layout_height="38dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginStart="30dp"
                android:background="@drawable/button_oval"
                android:text="@string/logout_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:text="@string/visiting_activity_title"
                android:textSize="20sp" />
            <Button
                android:id="@+id/follow_button"
                android:layout_width="76dp"
                android:layout_height="38dp"
                android:layout_gravity="end"
                android:layout_marginStart="84dp"
                android:background="@drawable/button_oval"
                android:text="@string/follow_button"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10dp" />
        </LinearLayout>
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/userImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/userImageContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/userImage"
                android:orientation="vertical">
                <TextView
                    android:layout_marginStart="10dp"
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homePageTitle"
                    android:textSize="20sp" />
                <TextView
                    android:layout_marginStart="10dp"
                    android:id="@+id/userAlias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homePageTitle"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/followerCountVisitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/followerCount"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/followeeCountVisitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/followeeCount"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/visitor_view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/visitor_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary" />
    </androidx.viewpager.widget.ViewPager>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
